se cambio color en logo

--- a/css/index.css
+++ b/css/index.css
@@ -429,7 +429,7 @@ section {
   height: 6cm;
   border-radius: 30%;
   border: solid;
-  border-color: #df2909;
+  border-color: #09dfd4;
   transition: all;
   margin: 1cm;
 }
