Se cambio color en imagen logo

--- a/css/index.css
+++ b/css/index.css
@@ -429,7 +429,7 @@ section {
   height: 6cm;
   border-radius: 30%;
   border: solid;
-  border-color: #09dfd4;
+  border-color: #e5ebea;
   transition: all;
   margin: 1cm;
 }
