--- a/css/index.css
+++ b/css/index.css
@@ -393,7 +393,7 @@ section {
 }
 .menu li a:hover {
   background-color: grey;
-  color: #210849;
+  color: #0c90b8;
   text-decoration-line: none;
   padding: 20px;
   border-style: solid;
