[UPDATE] Se cambio color borde en logo

--- a/css/index.css
+++ b/css/index.css
@@ -393,7 +393,7 @@ section {
 }
 .menu li a:hover {
   background-color: grey;
-  color: #0c90b8;
+  color: #bb0c0c;
   text-decoration-line: none;
   padding: 20px;
   border-style: solid;
