--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,7 +2,7 @@
 footer{
 	margin:0;
     text-align: center;
-    background-image: linear-gradient(to right,black,grey);
+    background-image: linear-gradient(to right ,rgb(8, 15, 75),blacK);
 }
 article, footer{
 	flex:1;
