--- a/scss/_grilla.scss
+++ b/scss/_grilla.scss
@@ -19,34 +19,40 @@
 	padding: 25mm;
 	font-family: Tourney;
 	font-size: 5cm;
-	color: red;
+	color: rgb(9, 32, 75);
 }
 .tWiter {
 	grid-area: tWiter;
-	background-color: #272725;
 }
 .tWiter img {
     height: 150px;
     width: 150px;
     margin: 7mm 1mm 1mm 5mm;
+	border: solid;
+	border-color: #056c9c;
+	margin: 0;
 }
 .gRam {
 	grid-area: gRam;
-	background-color: #2a292c;
 }
 .gRam img {
     height: 150px;
     width: 150px;
     margin: 7mm 1mm 1mm 5mm;
+	border: solid;
+	border-color: #056c9c;
+	margin: 0;
 }
 .eLlinke{
 	grid-area: eLlinke;
-	background-color: #272725;
 }
 .eLlinke img {
     height: 150px;
     width: 150px;
     margin: 7mm 1mm 1mm 0mm;
+	border: solid;
+	border-color: #056c9c;
+	margin: 0;
 }
 
 /*Grilla lOsabonos*/
