[UPDATE] Se modificó color en marcos de fotos grillas

--- a/css/index.css
+++ b/css/index.css
@@ -296,7 +296,7 @@ section {
   margin: 7mm 1mm 1mm 5mm;
   border-radius: 2ch;
   border: solid;
-  border-color: #a4c70a;
+  border-color: #0c6672;
 }
 
 .mEnsuales {
@@ -324,7 +324,7 @@ section {
   padding: 15mm;
   font-family: Tourney;
   font-size: 5cm;
-  color: #47d61b;
+  color: #1b9bd6;
 }
 
 .sUfrio {
@@ -344,7 +344,7 @@ section {
   margin: 7mm 1mm 1mm 5mm;
   border-radius: 2ch;
   border: solid;
-  border-color: #759608;
+  border-color: #087a96;
   padding: 5mm;
 }
 
