[ADD] Se agregó boton en index y grilla de Abonos en Laboral

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,3 +8,259 @@ article, footer{
 	flex:1;
 	margin:0;
 }
+/*boton color*/
+.btn {
+	margin:0 auto;
+}
+.btn a{
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+	position: relative;
+	color: #f5f5f5;
+	height: 100px;
+	width: 500px;
+	display: block;
+	text-align: center;
+	border-radius: 10px;
+	text-decoration: none;
+	background-image: linear-gradient(115deg,#240557,#141101,#102f96,#090f11,#4644ce);
+}
+.btn h3 {
+	color:rgb(232, 235, 226);
+	display: flex;
+	justify-content: center;
+	font-size: 1.5cm;
+}
+  .btn a:hover{
+	animation: rotate 0.6s linear infinite;
+	text-decoration: none;
+
+  }
+  @keyframes rotate {
+	100%{
+	  filter: hue-rotate(-360deg)
+	}
+}
+/*CARDS ABONOS LABORALES*/
+.wrapper{
+	max-width: 1090px;
+	width: 100%;
+	margin: auto;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+  }
+  .wrapper .table{
+	background: rgb(19, 1, 1);
+	width: calc(33% - 20px);
+	padding: 30px 30px;
+	position: relative;
+	box-shadow: 0 5px 10px rgba(6, 129, 211, 0.1);
+	margin-bottom: 10mm;
+	margin-top: 5mm;
+  }
+  .table .price-section{
+	display: flex;
+	justify-content: center;
+  }
+  .table .price-area{
+	height: 30px;
+	width: 30px;
+	border-radius: 90%;
+	padding: 2px;
+  }
+  .price-area .inner-area{
+	height: 100%;
+	width: 100%;
+	border-radius: 50%;
+	border: 3px solid #fff;
+	line-height: 117px;
+	text-align: center;
+	color: #fff;
+	position: relative;
+  }
+  .price-area .inner-area .text{
+	font-size: 30px;
+	font-weight: 400;
+	position: absolute;
+	top: -10px;
+	left: 17px;
+  }
+  .price-area .inner-area .price{
+	font-size: 45px;
+	font-weight: 500;
+	margin-left: 16px;
+  }
+  .table .package-name{
+	width: 100%;
+	height: 2px;
+	margin: 35px 0;
+	position: relative;
+  }
+  .table .package-name::before{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	font-size: 25px;
+	font-weight: 500;
+	background: #fff;
+	padding: 0 15px;
+	transform: translate(-50%, -50%);
+  }
+  .table .features li{
+	margin-bottom: 15px;
+	list-style: none;
+	display: flex;
+	justify-content: space-between;
+  }
+  .features li .list-name{
+	font-size: 17px;
+	font-weight: 400;
+  }
+  .features li .icon{
+	font-size: 15px;
+  }
+  .features li .icon.check{
+	color: #2d47b9;
+  }
+  .features li .icon.cross{
+	color: #cd3241;
+  }
+  .table .btn{
+	width: 100%;
+	display: flex;
+	margin-top: 35px;
+	justify-content: center;
+  }
+  .table .btn button{
+	width: 80%;
+	height: 50px;
+	color: #fff;
+	font-size: 20px;
+	font-weight: 500;
+	border: none;
+	outline: none;
+	border-radius: 25px;
+	cursor: pointer;
+	transition: all 0.3s ease;
+  }
+  .table .btn button:hover{
+	border-radius: 5px;
+  }
+  .basic .features li::selection{
+	background: #e5e8e9;
+  }
+  .basic ::selection,
+  .basic .price-area,
+  .basic .inner-area{
+	background: #97c405;
+  }
+  .basic .btn button{
+	border: 2px solid #4643ef;
+	background:#97c405;
+	color: #170b5a;
+  }
+  .basic .btn button:hover{
+	background: #044c6d;
+	color: #fff;
+  }
+  .premium ::selection,
+  .premium .price-area,
+  .premium .inner-area,
+  .premium .btn button{
+	background: #017070;
+	border: 2px solid #4643ef;
+  }
+  .premium .btn button:hover{
+	background: #020c36;
+	color: #fff;
+  }
+  .ultimate ::selection,
+  .ultimate .price-area,
+  .ultimate .inner-area{
+	background: #04ac12;
+  }
+  .ultimate .btn button{
+	border: 2px solid #4643ef;
+	color: #d3dee4;
+	background: #04ac12;
+  }
+  .ultimate .btn button:hover{
+	background: #020c36;
+	color: #fff;
+  }
+  .basic .package-name{
+	background: #04065c;
+  }
+  .premium .package-name{
+	background: #04065c;
+  }
+  .ultimate .package-name{
+	background: #04065c;
+  }
+  .basic .package-name::before{
+	content: "Inicial";
+  }
+  .premium .package-name::before{
+	content: "intermedio";
+	font-size: 24px;
+  }
+  .ultimate .package-name::before{
+	content: "Integral";
+	font-size: 24px;
+  }
+  @media (max-width: 1020px) {
+	.wrapper .table{
+	  width: calc(50% - 20px);
+	  margin-bottom: 40px;
+	}
+  }
+  @media (max-width: 698px) {
+	.wrapper .table{
+	  width: 100%;
+	}
+  }
+  ::selection{
+	color: #fff;
+  }
+  .table .ribbon{
+	width: 150px;
+	height: 150px;
+	position: absolute;
+	top: -10px;
+	left: -10px;
+	overflow: hidden;
+  }
+  .table .ribbon::before,
+  .table .ribbon::after{
+	position: absolute;
+	content: "";
+	z-index: -1;
+	display: block;
+	border: 7px solid #023d81;
+	border-top-color: transparent;
+	border-left-color: transparent;
+  }
+  .table .ribbon::before{
+	top: 0px;
+	right: 15px;
+  }
+  .table .ribbon::after{
+	bottom: 15px;
+	left: 0px;
+  }
+  .table .ribbon span{
+	position: absolute;
+	top: 30px;
+	right: 0;
+	transform: rotate(-45deg);
+	width: 200px;
+	background: #033501;
+	padding: 10px 0;
+	color: #fff;
+	text-align: center;
+	font-size: 17px;
+	text-transform: uppercase;
+	box-shadow: 0 5px 10px rgba(0,0,0,0.12);
+  }
