--- a/css/index.css
+++ b/css/index.css
@@ -266,7 +266,7 @@ article, footer {
 }
 
 .premium .package-name::before {
-  content: "intermedio";
+  content: "Intermedio";
   font-size: 24px;
 }
 
