--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -203,7 +203,7 @@ article, footer{
 	content: "Inicial";
   }
   .premium .package-name::before{
-	content: "intermedio";
+	content: "Intermedio";
 	font-size: 24px;
   }
   .ultimate .package-name::before{
